# crewai-hack

./: .env.example  .gitignore  API_SCHEMA.md  CLAUDE.md  LICENSE  Taskfile.yml
Evals/: README.md  generate_images.py  prompts.csv  prompts_imagen4.csv  validate_images.py
backend/: .env.example  .gitignore  Makefile  SETUP.md  image_generation.py  main.py  models.py  ocr.py  ocr_matcher_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_iterative_workflow.py  test_ocr_integration.py  text_extractor_agent.py  workflow.py
backend/prompts/: ocr_matcher_prompt.txt  ocr_matcher_task_prompt.txt  text_extractor_prompt.txt  text_extractor_task_prompt.txt
backend/tests/: test_main.py  test_ocr.py  test_ocr_integration.py  test_ocr_matcher_agent.py  test_sse_client.py  test_text_extractor_agent.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: InputForm.tsx  IterationHistory.tsx  ResultDisplay.tsx
frontend/hooks/: useImageGeneration.ts
frontend/lib/: api.ts  config.ts  types.ts
