[project]
name = "text-aware-image-generation"
version = "0.1.0"
description = "Text-Aware Image Generation API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.18",
    "fal-client",
    "httpx==0.28.1",
    "requests==2.32.3",
    "google-cloud-vision>=3.10.2",
    "pillow>=11.3.0",
    "crewai>=0.165.1",
    "crewai-tools>=0.62.3",
    "google>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "httpx==0.28.1",
]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.4",
    "types-requests>=2.32.4.20250809",
]
